--- a/projets.html
+++ b/projets.html
@@ -16,16 +16,29 @@
 <label for="menu-icon"></label>
 
 <nav class="nav">
+    <div class="nav-logo">
+        <a href="index.html">
+            Fatima Abouda
+        </a>
+    </div>
     <ul class="pt-5">
+
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="about.html">A propos de moi</a></li>
+        <li><a href="about.html">À propos de moi</a></li>
         <li><a href="experience.html">Expérience</a></li>
         <li><a href="projets.html">Projets</a></li>
-        <li><a href="ordi.html">Stage 1</a></li>
-        <li><a href="chateau9.html">Stage 2</a></li>
+        <li><a href="competences.html">Compétences</a></li>
+        <li>
+            <a href="#">Stages</a>
+            <ul class="submenu">
+                <li><a href="ordi.html">Stage 1</a></li>
+                <li><a href="chateau9.html">Stage 2</a></li>
+            </ul>
+        </li>
         <li><a href="vielle.html">Veille</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
+
 </nav>
 
 <div class="hero-project">
@@ -52,6 +65,7 @@
                                 <img src="images/logoPhotos.png" alt="">
                                 <blockquote>
                                     <strong>Projet Photos</strong>
+                                    </blockquote>
                                     <p>
                                         Le projet de gestion de bibliothèque est une application web conçue pour simplifier la gestion des livres et des
                                         utilisateurs dans une bibliothèque. Elle offre aux utilisateurs la possibilité de rechercher, consulter et interagir
@@ -59,7 +73,6 @@
                                         emprunts. L'objectif est de fournir une solution centralisée et conviviale pour une gestion efficace de la bibliothèque.
 
                                     </p>
-                                </blockquote>
                             </a>
                         </div>
                     </div>
@@ -74,9 +87,9 @@
                                 <img src="images/portfolio/portfolio-3.jpg" alt="">
                                 <blockquote>
                                     <strong>Projet Resto</strong>
-                                    <p>
+                                                                    </blockquote>
+<p>
 Le projet de gestion de restaurants vise à fournir une plateforme conviviale permettant aux utilisateurs d'explorer une variété d'établissements de restauration. Avec des fonctionnalités telles que la récupération de données sur les utilisateurs, les types de cuisine, les restaurants, les photos et les critiques, ainsi que la gestion des utilisateurs et des connexions, l'objectif est de créer une expérience complète pour les passionnés de gastronomie.                                    </p>
-                                </blockquote>
                             </a>
                         </div>
                     </div>
@@ -91,14 +104,14 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                                 <img src="images/portfolio/portfolio-4.png" alt="">
                                 <blockquote>
                                     <strong>Projet seminaires</strong>
-                                    <p>
+                                                                    </blockquote>
+<p>
                                         Ce projet est une application de gestion de séminaire développée en PHP, utilisant des fichiers JSON pour stocker les
                                         données. Son objectif est de permettre aux participants de s'inscrire aux conférences et aux administrateurs de gérer
                                         les inscriptions. Avec des fonctionnalités de chargement/sauvegarde de données, gestion des participants et des
                                         conférences, ainsi que des contrôles d'erreurs et de sécurité, cette application offre une solution efficace et
                                         conviviale pour la gestion d'un séminaire.
                                     </p>
-                                </blockquote>
                             </a>
                         </div>
                     </div>
@@ -106,7 +119,7 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                 <!-- ==== Portfolio item End ==== -->
 
                 <!-- ==== Portfolio item Start ==== -->
-
+<!--
                 <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
@@ -126,7 +139,7 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                         </div>
                     </div>
                 </div>
-
+-->
                 <!-- ==== Portfolio item End ==== -->
 
                 <!-- ==== Portfolio item Start ==== -->
@@ -153,20 +166,20 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                 <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
-                            <a href="resources/doc_technic.pdf">
+                            <a href="projetordipointcom.html">
                                 <img src="images/portfolio/portfolio-6.png" alt="">
                                 <blockquote>
                                     <strong>
                                         Gestion de la clientéle et leur facture
                                     </strong>
-                                    <p>
+                                                                    </blockquote>
+<p>
                                         Ce projet est une application web développée en PHP, avec une base de données MySQL, visant à gérer les informations
                                         relatives aux interventions pour les clients. Il offre des fonctionnalités de recherche, d'ajout et de création de
                                         devis. L'interface comprend une page d'accueil redirigeant vers trois principales : recherche, ajout et devis. La page
                                         d'ajout propose un formulaire pour saisir les détails des interventions, avec des listes déroulantes pour le matériel et
                                         les services, préalablement chargées depuis la base de données.
                                     </p>
-                                </blockquote>
                             </a>
                         </div>
                     </div>
@@ -178,12 +191,13 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                 <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
-                            <a href="resources/doc technique_analim.pdf">
+                            <a href="projetanalim.html">
                                 <img src="images/portfolio/portfolio-7.png" alt="">
                                 <blockquote>
                                     <strong>
                                         Analim
-                                    </strong>
+                                    </strong></blockquote>
+
                                     <p>
                                         Ce projet vise à développer une application web pour faciliter l'organisation du congrès [ANALIM] par la Maison des
                                         Ligues de Lorraine (M2L). L'objectif est de créer une plateforme flexible permettant de gérer les inscriptions, les
@@ -191,7 +205,6 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                                         d'autres régions françaises, la M2L organise ce congrès à Limoges, et cette application servira à simplifier et
                                         optimiser le processus de gestion de cet événement.
                                     </p>
-                                </blockquote>
                             </a>
                         </div>
                     </div>
@@ -203,12 +216,13 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                 <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
-                            <a href="resources/doctechnique.pdf">
+                            <a href="projetchateu9.html">
                                 <img src="images/portfolio/portfolio-8.png" alt="">
                                 <blockquote>
                                     <strong>
                                         Gestion des sources
-                                    </strong>
+                                    </strong></blockquote>
+
                                     <p>
                                         Ce projet vise à créer une base de données à partir d'un fichier Word, en passant par la conversion en XML puis
                                         l'importation dans Excel pour une meilleure visualisation. Ensuite, nous concevrons la structure de la base de données
@@ -217,13 +231,34 @@ Le projet de gestion de restaurants vise à fournir une plateforme conviviale pe
                                         (Modèle-Vue-Contrôleur) et implémente des fonctionnalités telles que l'ajout, la modification et la suppression
                                         d'auteurs, de documents, de sources, de lieux et de types de documents.
                                     </p>
-                                </blockquote>
                             </a>
                         </div>
                     </div>
                 </div>
                 
                 <!-- ==== Portfolio item End ==== -->
+
+                <!-- ==== Portfolio item Start ==== -->
+                <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <a href="projetjardinier.html">
+                                <img src="images/portfolio/portfolio-9.png">
+                                <blockquote>
+                                    <strong>
+                                        Le p'tit jardinier
+                                    </strong></blockquote>
+
+                                    <p>
+                                        Le projet consiste en la création d'une application web en utilisant le Framework Symfony pour la société Le p'tit Jardinier, qui se spécialise dans
+                                        l'entretien des jardins pour les particuliers et les organisations. L'application permet aux utilisateurs d'obtenir des
+                                        devis pour la taille de haies.
+                                        
+                                    </p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
