--- a/projetanalim.html
+++ b/projetanalim.html
@@ -124,10 +124,10 @@
                         <embed src="resources/doc technique_analim.pdf" type="application/pdf" width="100%" height="600px" />
                     </div>
                     <div class="video">
-                        <video controls>
-                            <source src="images/portfolio/analim/analim ‐ Réalisée avec Clipchamp.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="500" height="315" src="https://www.youtube.com/embed/KlU_Knt9UkA" frameborder="0"
+                            allowfullscreen></iframe>
                     </div>
+
                 </div>
             </div>
     </section>
