--- a/projetchateu9.html
+++ b/projetchateu9.html
@@ -129,9 +129,8 @@
             <embed src="resources/doctechnique4.pdf" type="application/pdf" width="100%" height="600px" />
         </div>
         <div class="video">
-            <video controls>
-                <source src="images/portfolio/source/source ‐ Réalisée avec Clipchamp.mp4" type="video/mp4">
-            </video>
+            <iframe width="500" height="315" src="https://www.youtube.com/embed/n_cvCBZq-sA" frameborder="0"
+                allowfullscreen></iframe>
         </div>
     </div>
     </div>
