--- a/projetjardinier.html
+++ b/projetjardinier.html
@@ -131,9 +131,8 @@
                     <embed src="resources/jardinier.pdf" type="application/pdf" width="100%" height="600px" />
                 </div>
                 <div class="video">
-                    <video controls>
-                        <source src="images/portfolio/jardinier/lepetitjardinier ‐ Réalisée avec Clipchamp.mp4" type="video/mp4">
-                    </video>
+                    <iframe width="500" height="315" src="https://www.youtube.com/embed/T5GUPyyXgQE" frameborder="0"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </div>
