--- a/projetphotos.html
+++ b/projetphotos.html
@@ -106,10 +106,10 @@
                         <embed src="resources/Projet de Gestion de Photos.pdf" type="application/pdf" width="100%" height="600px" />
                     </div>
                     <div class="video">
-                        <video controls>
-                            <source src="images/portfolio/clubphoto/club photo ‐ Réalisée avec Clipchamp.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="500" height="315" src="https://www.youtube.com/embed/fpegW6Bg39U" frameborder="0"
+                            allowfullscreen></iframe>
                     </div>
+
                 </div>
             </div>
     </section>
