--- a/projetresto.html
+++ b/projetresto.html
@@ -108,9 +108,8 @@
           <embed src="resources/Projet Rest.pdf" type="application/pdf" width="100%" height="600px" />
         </div>
         <div class="video">
-          <video controls>
-            <source src="images/portfolio/resto/r3st0.fr ‐ Réalisée avec Clipchamp.mp4" type="video/mp4">
-          </video>
+          <iframe width="500" height="315" src="https://www.youtube.com/embed/awLBqQqwHkU" frameborder="0"
+            allowfullscreen></iframe>
         </div>
       </div>
     </div>
