--- a/projetseminaires.html
+++ b/projetseminaires.html
@@ -106,9 +106,8 @@
                     <embed src="resources/seminaire.pdf" type="application/pdf" width="100%" height="600px" />
                 </div>
                 <div class="video">
-                    <video controls>
-                        <source src="images/portfolio/seminaire/seminaire.mp4" type="video/mp4">
-                    </video>
+                    <iframe width="500" height="315" src="https://www.youtube.com/embed/YMM_t2dgLR0" frameborder="0"
+                        allowfullscreen></iframe>
                 </div>
         </div>
     </section>
