--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
 <nav class="nav">
     <div class="nav-logo">
         <a href="index.html">Fatima Abouda</a>
+        
     </div>
     <ul class="pt-5">
         <li><a href="index.html">Accueil</a></li>
@@ -54,7 +55,7 @@
             <div class="contact-info-item padd-15">
                 <div class="icon"><i class="fa fa-phone"></i></div>
                 <h4>Appelez-moi sur</h4>
-                <p><a href="tel:00 33 6 00 00 00 00 00">00 33 6 00 00 00 00 00</a></p>
+                <p><a href="tel:00 33 6 44 84 66 15">00 33 6 44 84 66 15</a></p>
             </div>
             <!-- ==== Contact info item End ==== -->
             <!-- ==== Contact info item Start ==== -->
