--- a/experience.html
+++ b/experience.html
@@ -112,9 +112,9 @@
                                         </h3>
                                         <h4 class="timeline-title">Brevet des Collèges</h4>
                                         <p class="timeline-text">
-                                            <i><strong>Collège Jean Moulin</strong></i>
+                                            <i><strong>Collège Jean Monnet</strong></i>
                                             <br>
-                                            <i><strong>Limoges, France</strong></i>
+                                            <i><strong>Chateauneuf-la-forêt, France</strong></i>
                                         </p>
                                     </div>
 
