--- a/projets.html
+++ b/projets.html
@@ -67,10 +67,10 @@
                                     <strong>Projet Photos</strong>
                                     </blockquote>
                                     <p>
-                                        Le projet de gestion de bibliothèque est une application web conçue pour simplifier la gestion des livres et des
-                                        utilisateurs dans une bibliothèque. Elle offre aux utilisateurs la possibilité de rechercher, consulter et interagir
-                                        avec la collection de livres, tandis que les bibliothécaires disposent d'outils avancés pour gérer la collection et les
-                                        emprunts. L'objectif est de fournir une solution centralisée et conviviale pour une gestion efficace de la bibliothèque.
+                                        Ce projet est une application web de gestion de photos développée en PHP. L'application permet aux utilisateurs de
+                                        visualiser des photos, des articles associés, et des informations sur les photographes. L'application est structurée
+                                        pour offrir une interface conviviale et modulaire, facilitant la navigation et l'interaction avec les contenus
+                                        disponibles.
 
                                     </p>
                             </a>
