--- a/projetseminaires.html
+++ b/projetseminaires.html
@@ -99,6 +99,8 @@
                 <p>PHP : Langage de programmation côté serveur pour générer du contenu dynamique.</p>
                 <p>JSON : Format pour stocker et échanger les données de manière structurée.</p>
                 <p>HTML/CSS : Langages pour structurer et styliser les pages Web.</p>
+                <p>MVC (Modèle-Vue-Contrôleur) : Pattern de conception pour séparer la logique de l'application en composants distincts.</p>
+                
             </div>
             <hr>
             <div class="media-container">
