--- a/experience.html
+++ b/experience.html
@@ -74,8 +74,8 @@
                                             des compétences dans le domaine de
                                             l'informatique et du numérique surtout dans le domaine du développement
                                             logiciel j'ai pu apprendre à
-                                            concevoir, développer et maintenir des applications informatiques, des sites
-                                            web, des applications mobiles, API,
+                                            concevoir, des sites
+                                            web, API,
                                             bases de données, modélisation, etc.</p>
 
                                         </p>
