--- a/experience.html
+++ b/experience.html
@@ -62,7 +62,7 @@
                                     <div class="timeline-item">
                                         <div class="circle-dot"></div>
                                         <h3 class="timeline-date">
-                                            <i class="fa fa-calendar"></i> 2022 - 20--
+                                            <i class="fa fa-calendar"></i> 2022 - 2024
                                         </h3>
                                         <h4 class="timeline-title">BTS SIO option SLAM (Solutions Logicielles et
                                             Applications Métiers)</h4>
@@ -137,7 +137,14 @@
                                         </h3>
                                         <h4 class="timeline-title">Chateau9</h4>
                                         <i><strong>Chateauneuf-la-forêt, France</strong></i>
-                                        <p class="timeline-text">Développement web</p>
+                                        <br>
+                                        <i><strong>Développement web</strong></i>
+                                        <div class="timeline-text">
+                                            <li>Développer une base de données et un site en MVC afin d’aider un auteur à organiser ses données
+                                                pour la publication d'un livre. <a href="projetchateu9.html">Lien du projet</a> </li>
+                                            <li>Compétences utilisé et améliorer durant ce stage : WAMP, PHP, JavaScript, base de données, JOOMLA, Wordpress</li>
+                                            <li>Participer au projet EiCLaR <a href="https://cordis.europa.eu/project/id/965945/es">Savoir plus</a> </li>
+                                        </div>
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -147,7 +154,12 @@
                                         </h3>
                                         <h4 class="timeline-title">Ordipointcom</h4>
                                         <i><strong>Limoges, France</strong></i>
-                                        <p class="timeline-text">Développement web</p>
+                                        <br>
+                                        <i><strong>Développement web</strong></i>
+                                        <div class="timeline-text">
+                                            <li>Création d’un site pour la gestion d’intervention <a href="projetordipointcom.html">Lien du projet</a> </li>
+                                            <li>Compétences utilisé et améliorer durant ce stage : WAMP, PHP, WinSCP, FPDF, base de données</li>
+                                        </div> 
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -156,8 +168,15 @@
                                             <i class="fa fa-calendar"></i> 10/01/2022 – 11/02/2022
                                         </h3>
                                         <h4 class="timeline-title">Région Nouvelle-Aquitaine</h4>
+                                        <i><small>Maintenance et réseau</small></i>
+                                        <br>
                                         <i><strong>Limoges, France</strong></i>
-                                        <p class="timeline-text">Maintenance et réseau</p>
+                                        
+                                        <div class="timeline-text">
+                                            <li>Gérer l'environnement de comptes utilisateurs</li>
+                                            <li>Créer, suivre et clôturer les tickets incidents</li>
+                                            <li>Migration Windows</li>
+                                        </div>                                        
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -167,8 +186,13 @@
                                         </h3>
                                         <h4 class="timeline-title">Micro Rezo</h4>
                                         <i><strong>Limoges, France</strong></i>
-                                        <p class="timeline-text">Maintenance et réparation d'ordinateur</p>
-                                    </div>
+                                        <br>
+                                        <i><strong>Maintenance et réparation d’ordinateur</strong></i>
+                                        <div class="timeline-text">
+                                            <li>Installer les équipements informatiques</li>
+                                            <li>Assurer l’entretien du matériel</li>
+                                            <li>Démonter/Monter un ordinateur et son installation</li>
+                                        </div>                                    </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
                                         <div class="circle-dot"></div>
@@ -177,7 +201,16 @@
                                         </h3>
                                         <h4 class="timeline-title">Caisse primaire d’assurance maladie</h4>
                                         <i><strong>Limoges, France</strong></i>
-                                        <p class="timeline-text">Maintenance et réseau</p>
+                                        <br>
+                                        <i><strong>Maintenance et réseau</strong></i>
+                                        <div class="timeline-text">
+                                            <li>Créer, suivre et clôturer les tickets incidents</li>
+                                            <li>Installer les équipements informatiques</li>
+                                            <li>Changer de switch</li>
+                                            <li>Faire un peu de gestion réseau</li>
+                                            <li>Formater les ordinateurs</li>
+                                            <li>Installer des postes de travail</li>
+                                        </div>
                                     </div>
 
                                     <!-- ==== timeline item ==== -->
@@ -188,7 +221,13 @@
                                         </h3>
                                         <h4 class="timeline-title">Lycée Maryse Bastié</h4>
                                         <i><strong>Limoges, France</strong></i>
-                                        <p class="timeline-text">Maintenance et réseau</p>
+                                        <br>
+                                        <i><strong>Maintenance et réseau</strong></i>
+                                        <div class="timeline-text">
+                                            <li>Gérer les mises à jour</li>
+                                            <li>Établir des devis</li>
+                                            <li>Travailler avec Packet Tracer</li>
+                                        </div>
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -198,7 +237,9 @@
                                         </h3>
                                         <h4 class="timeline-title">Chateau9</h4>
                                         <i><strong>Chateauneuf-la-forêt, France</strong></i>
-                                        <p class="timeline-text">Création de site web</p>
+                                        <br>
+                                        <i><strong>Création de sites Web</strong></i>
+                                        <p class="timeline-text">Création d'un site avec HTML et CSS</p>
                                     </div>
                                 </div>
                             </div>
