--- a/index.html
+++ b/index.html
@@ -47,17 +47,18 @@
     <section class="home active section" id="home">
         <div class="container">
             <div class="row">
+                <div class="home-img padd-15">
+                    <img src="images/image.png" alt="img">
+                </div>
                 <div class="home-info padd-15">
                     <h3 class="hello">
                         <h3 class="hello">Je suis <span class="name">Fatima Abouda</span></h3>
-                        <h3 class="my-profession">Je suis <span class="typing">Etudiante en BTS SIO Option SLAM</span></h3>
+                        <h3 class="my-profession">Je suis <span class="typing">Etudiante en BACHELOR 3 DEVELOPPEUR WEB & APPLICATION</span></h3>
                         <p>Explorez mes projets et découvrez mon parcours dans le développement web. Si vous souhaitez en
                             savoir plus sur moi, n'hésitez pas à me contacter.</p>
                         <a href="resources/Fatima CV.pdf" class="btn">télécharger CV</a>
                 </div>
-                <div class="home-img padd-15">
-                    <img src="images/image.png" alt="img">
-                </div>
+                
             </div>
     </section>
 </body>
