--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                             <div class="about-content padd-15">
                                 <div class="row">
                                     <div class="about-text padd-15">
-                                        <h3>Je suis Fatima ABOUDA <span>Etudiante en BTS SIO</span></h3>
+                                        <h3>Je suis Fatima ABOUDA <span>Technicien Supérieur en développement web</span></h3>
                                         <p>
                                             Je suis une étudiante passionnée en BTS SIO (Services Informatiques aux Organisations) avec
                                             une spécialisation en option
@@ -131,7 +131,7 @@
                                                 <p>Langue : <span>français, anglais, arabe</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Dernier diplôme : <span>Bac Pro SN</span></p>
+                                                <p>Dernier diplôme : <span>BTS SIO SLAM</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>Statut actuel : <span>Étudiante en BTS SIO </span></p>
