--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                             <div class="about-content padd-15">
                                 <div class="row">
                                     <div class="about-text padd-15">
-                                        <h3>Je suis Fatima ABOUDA <span>Technicien Supérieur en développement web</span></h3>
+                                        <h3>Je suis Fatima ABOUDA <span>Technicienne Supérieur en développement web</span></h3>
                                         <p>
                                             Je suis une étudiante passionnée en BTS SIO (Services Informatiques aux Organisations) avec
                                             une spécialisation en option
