--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ recherche <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -134,7 +134,7 @@
                                                 <p>Dernier diplôme : <span>BTS SIO SLAM</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Statut actuel : <span>Étudiante en BTS SIO </span></p>
+                                                <p>Statut actuel : <span>En recherche d'un contrat de travail </span></p>
                                             </div>
                                             <div class="row">
                                                 <div class="buttons padd-15">
